force-app/main/default/objects/Documento__c/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el documento ha sido aprobado por el veedor correspondiente</description>
    <inlineHelpText>Indica si el documento ha sido aprobado por el veedor correspondiente</inlineHelpText>
    <label>Aprobado</label>
    <type>Checkbox</type>
</CustomField>