force-app/main/default/objects/Documento__c/fields/Archivo_Principal__c.field-meta.xml
<CustomField>
    <fullName>Archivo_Principal__c</fullName>
    <description>Id del archivo principal (el primero cargado)</description>
    <inlineHelpText>Id del archivo principal (el primero cargado)</inlineHelpText>
    <label>Archivo Principal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>