force-app/main/default/objects/Documento__c/fields/Cliente_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Proforma__c</fullName>
    <formula>Proforma__r.Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente Proforma</label>
    <type>Text</type>
</CustomField>