force-app/main/default/objects/Documento__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contenedor asociado a un pedido</description>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Documentos PG</relationshipLabel>
    <relationshipName>Documentos_PG</relationshipName>
    <type>Lookup</type>
</CustomField>