force-app/main/default/objects/Documento__c/fields/Link_Archivo_Principal__c.field-meta.xml
<CustomField>
    <fullName>Link_Archivo_Principal__c</fullName>
    <formula>IF(ISBLANK(Archivo_Principal__c),
&quot;-- Sin Datos --&quot;,
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,
HYPERLINK(&quot;/lightning/r/ContentDocument/&quot; +  Archivo_Principal__c  + &quot;/view?0.source=alohaHeader&quot;,
&quot;Archivo Principal&quot;),
HYPERLINK(&quot;/&quot; +  Archivo_Principal__c, &quot;Archivo Principal&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Archivo Principal</label>
    <type>Text</type>
</CustomField>