force-app/main/default/objects/Documento__c/fields/Numero_de_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Proforma__c</fullName>
    <formula>Proforma__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de Proforma</label>
    <type>Text</type>
</CustomField>