force-app/main/default/objects/Documento__c/fields/Oportunidad_Proforma__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Proforma__c</fullName>
    <formula>Proforma__r.Oportunidad__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Proforma</label>
    <type>Text</type>
</CustomField>