force-app/main/default/objects/Documento__c/fields/PedidoDeCompra__c.field-meta.xml
<CustomField>
    <fullName>PedidoDeCompra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido de Compra*</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipName>Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>