force-app/main/default/objects/Documento__c/fields/PedidoLineItem__c.field-meta.xml
<CustomField>
    <fullName>PedidoLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido Line Item</label>
    <referenceTo>PedidoLineItem__c</referenceTo>
    <relationshipName>Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>