force-app/main/default/objects/Documento__c/fields/Proceso__c.field-meta.xml
<CustomField>
    <fullName>Proceso__c</fullName>
    <label>Proceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmación</fullName>
            </value>
            <value>
                <fullName>Pedido Fábrica</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Producción</fullName>
            </value>
            <value>
                <fullName>Documentación del Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>