force-app/main/default/objects/Documento__c/fields/Proforma__c.field-meta.xml
<CustomField>
    <fullName>Proforma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unicamente para la Confirmación Cliente</description>
    <inlineHelpText>Unicamente para la Confirmación Cliente</inlineHelpText>
    <label>Proforma</label>
    <referenceTo>Proforma__c</referenceTo>
    <relationshipName>Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>