force-app/main/default/objects/Documento__c/fields/Tipo_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Documento__c</fullName>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Proceso__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proforma Confirmación Cliente</fullName>
            </value>
            <value>
                <fullName>Confirmación Proveedor</fullName>
            </value>
            <value>
                <fullName>Justificante Pago Deposito Pedido</fullName>
            </value>
            <value>
                <fullName>Packaging Draft</fullName>
            </value>
            <value>
                <fullName>Packaging Diseño</fullName>
            </value>
            <value>
                <fullName>Packaging Fábrica</fullName>
            </value>
            <value>
                <fullName>Packaging Aprobación Cliente</fullName>
            </value>
            <value>
                <fullName>Fotos final de Producción</fullName>
            </value>
            <value>
                <fullName>Informe de Auditoría de Calidad</fullName>
            </value>
            <value>
                <fullName>Informe Carga de Contenedor</fullName>
            </value>
            <value>
                <fullName>Justificante de Pago Balance Pedido</fullName>
            </value>
            <value>
                <fullName>Factura</fullName>
            </value>
            <value>
                <fullName>Packing List</fullName>
            </value>
            <value>
                <fullName>BL</fullName>
            </value>
            <value>
                <fullName>Certificado de Origen</fullName>
            </value>
            <value>
                <fullName>Otros Certificados</fullName>
            </value>
            <value>
                <fullName>Orden de compra</fullName>
            </value>
            <value>
                <fullName>OAC // Open Account Credit</fullName>
            </value>
            <value>
                <fullName>LC // Letter of Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>